<resources>
    <string name="app_name">Tingtel Airtime</string>
    <string name="ob_header1">WELCOME TO TINGTEL</string>
    <string name="ob_header2">MAKE TRANSFERS TO ANY NETWORK IN NIGERIA</string>
    <string name="ob_header3">PERMISSION REQUIRED</string>
    <string name="ob_get_started">GET STARTED</string>
    <string name="ob_desc1">Tingtel is a unified app for airtime transfer to all networks in Nigeria</string>
    <string name="ob_desc2">Conveniently transfer airtime between Networks in Nigeria</string>
    <string name="ob_desc3">To use Tingtel, kindly accept the required permissions, click on "Get Started"</string>
    <string name="set_your_password">SET YOUR PASSWORD</string>
    <string name="delete">Delete</string>
    <string name="message">MESSAGE</string>
    <string name="dismiss">DISMISS</string>
    <string name="yes_delete">YES, DELETE</string>
    <string name="cancel">NO, CANCEL</string>
    <string name="are_you_sure_you_want_to_delete_your_account_n_nb_your_data_would_be_erased">ARE YOUR SURE YOU WANT TO DELETE YOUR ACCOUNT? YOUR DATA WILL BE ERASED.</string>
    <string name="change_email">CHANGE EMAIL</string>
    <string name="sim_1">SIM 1</string>
    <string name="sim_2">SIM 2</string>
    <string name="next">NEXT</string>
    <string name="tingtel_helps_you_transfer_airtime_of_any_networkto_other_networks_n_n_in_order_to_transfer_airtime_please_click_on_the_transfer_airtime_button">TINGTEL HELPS YOU TRANSFER AIRTIME OF ANY NETWORK TO OTHER NETWORKS. \n TO PROCEED, CLICK ON THE TRANSFER AIRTIME BUTTON.</string>
    <string name="transfer_airtime">TRANSFER AIRTIME</string>
    <string name="history">HISTORY</string>
    <string name="welcome_martins">Hi, TOM CRUISE</string>
    <string name="naira">"\u20A6"</string>
    <string name="select_sim_1_network">SELECT SIM 1 NETWORK</string>
    <string name="enter_your_phone_number">ENTER PHONE NUMBER</string>
    <string name="enter_your_first_name">ENTER FIRST NAME</string>
    <string name="etner_your_last_name">ENTER LAST NAME</string>
    <string name="enter_your_email_address">ENTER EMAIL ADDRESS</string>
    <string name="enter_your_username">ENTER USERNAME</string>
    <string name="sign_up">SIGN UP</string>
    <string name="have_an_account_login">ALREADY HAVE AN ACCOUNT? LOG IN</string>
    <string name="remember_me">REMEMBER ME?</string>
    <string name="enter_password">ENTER PASSWORD</string>
    <string name="tingtel">TINGTEL</string>
    <string name="re_enter_your_password">RE-ENTER PASSWORD</string>
    <string name="set_password">SET PASSWORD</string>
    <string name="enter_the_4_digit_otp_sent_to_your_phone_or_email">ENTER 4 DIGIT CODE SENT TO YOUR PHONE</string>
    <string name="didn_t_get_the_otp_resend_otp">DIDN\'T GET THE OTP? RESEND OTP.</string>
    <string name="verify">VERIFY</string>
    <string name="otp_verification">OTP VERIFICATION</string>
    <string name="good_job">GOOD JOB</string>
    <string name="forgot_password_retrieve">FORGOT PASSWORD? RETRIEVE</string>
    <string name="sign_in">SIGN IN</string>
    <string name="you_have_successfully_registered_your_sim">YOU HAVE SUCCESSFULLY REGISTERED YOUR SIM</string>
    <string name="register_sim_2_now">REGISTER SIM 2 NOW</string>
    <string name="no_thanks_later">NO THANKS, LATER</string>
    <string name="check_balance">CHECK BALANCE</string>
    <string name="amount">AMOUNT</string>
    <string name="service_fee">SERVICE FEE</string>
    <string name="amount_to_be_credited">CREDITED AMOUNT</string>
    <string name="transfer">TRANSFER</string>
    <string name="preview">CONFIRM</string>
    <string name="enter_your_current_password">CURRENT PASSWORD</string>
    <string name="set_your_new_password">NEW PASSWORD</string>
    <string name="re_enter_your_new_password">RE-ENTER PASSWORD</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="enter_your_current_email_address">CURRENT EMAIL ADDRESS</string>
    <string name="enter_new_email_address">NEW EMAIL ADDRESS</string>
    <string name="re_enter_your_email_address">RE-ENTER EMAIL ADDRESS</string>
    <string name="select_a_sim_to_get_qr_code">SELECT A SIM TO GET QR CODE</string>
    <string name="get_qr_code">GET QR CODE</string>
    <string name="share_your_code_with_friends">SHARE CODE WITH FRIENDS</string>
    <string name="phone_number">PHONE NUMBER</string>
    <string name="do_you_want_to_delete_this_sim">DO YOU WANT TO DELETE THIS SIM?</string>
    <string name="explain_in_details">GIVE DETAILS OF YOUR CHALLENGE</string>
    <string name="report_issue">REPORT ISSUE</string>
    <string name="enter_sim_2_details">ENTER SIM 2 DETAILS</string>
    <string name="select_sim_2_network">SELECT SIM 2 NETWORK</string>
    <string name="from">FROM</string>
    <string name="to">TO</string>
    <string name="manage_sims">MANAGE SIMS</string>
    <string name="tutorial_how_to_use">TUTORIAL (HOW TO USE)</string>
    <string name="report_an_issue">REPORT AN ISSUE</string>
    <string name="do_you_want_to_logout">DO YOU WANT TO LOGOUT?</string>
    <string name="email_is_required">EMAIL IS REQUIRED</string>
    <string name="invalid_characters">Invalid Character/s</string>
    <string name="enter_sim_1_details">ENTER SIM 1 DETAILS</string>
    <string name="enter_transfer_pin">ENTER NETWORK PIN</string>
    <string name="do_you_want_to_exit">DO YOU WANT TO EXIT?</string>
    <string name="do_you_want_to_delete_this_beneficiary">DO YOU WANT TO DELETE THIS BENEFICIARY?</string>
    <string name="beneficiary_network">BENEFICIARY NETWORK</string>
    <string name="beneficiary_phone_number">BENEFICIARY PHONE NUMBER</string>
    <string name="network_name">NETWORK NAME</string>
    <string name="beneficiary_name">BENEFICIARY NAME</string>
    <string name="enter_name">ENTER NAME</string>
    <string name="save">SAVE</string>
    <string name="mtn_sim_detected">MTN SIM DETECTED</string>
    <string name="airtel_sim_detected">AIRTEL SIM DETECTED</string>
    <string name="nine_mobile_sim_detected">9MOBILE SIM DETECTED</string>
    <string name="glo_sim_detected">GLO SIM DETECTED</string>
    <string name="thats_ok_n_n_just_enter_your_email_and_you_will_receive_a_reset_link">Enter your email and you will receive a reset link</string>
    <string name="submit">Submit</string>
    <string name="add_beneficiary">ADD BENEFICIARY</string>
    <string name="thank_you_for_using_this_service_n_if_your_transaction_was_successful_you_can_check_the_status_by_click_the_button_below">If your transaction was successful, check your balance first and then check the status of the transaction</string>
    <string name="Location_needed">Location is needed</string>
    <string name="put_on_your_gps">Location is needed to proceed</string>
    <string name="loading_please_wait">Loading, please wait...</string>
    <string name="welcome_customer">Welcome Customer</string>
    <string name="sim_one_history">Sim 1 History</string>
    <string name="sim_two_history">Sim 2 History</string>
    <string name="do_you_want_to_delete_this_record">DO YOU WANT TO DELETE THIS RECORD?</string>
    <string name="network_error">NETWORK ERROR</string>
    <string name="tingtel_technology_solutions">Tingtel Technology Solutions</string>
    <string name="email_support_tingtel_com">Email: support@tingtel.com</string>
    <string name="no_29_ribadu_road_off_awolowo_road_ikoyi_lagos_state_nigeria">No 29 Ribadu Road off Awolowo Road, Ikoyi, Lagos State, Nigeria.</string>
    <string name="login_with_fingerprint">Login with fingerprint</string>
    <string name="REGISTER">REGISTER</string>
    <string name="save_beneficiary">Save beneficiary?</string>
    <string name="check_status">Check Status</string>
    <string name="or">or</string>
    <string name="help_support">Help/Support</string>
    <string name="more_options">More Options</string>
    <string name="privacy_policy">PRIVACY POLICY</string>
    <string name="about_us">ABOUT US</string>
    <string name="share_app">SHARE APP</string>
    <string name="delete_account">DELETE ACCOUNT?</string>
    <string name="logout">LOGOUT</string>
    <string name="write_a_message">Write a message</string>
    <string name="no_record_found">No record found</string>
    <string name="your_reference_id_is">YOUR REFERENCE ID IS:</string>
    <string name="refresh_status">Refresh Status</string>
    <string name="what_does_above_mean">What does above mean?</string>
    <string name="completed">Completed</string>
    <string name="processing">Processing</string>
    <string name="pending">Pending</string>
    <string name="if_all_circles_are_checked_that_means_your_transaction_was_successful">If all circles are checked, that means your transaction was successful</string>
    <string name="have_a_complaint_click_here">Have a complaint? Click here</string>
    <string name="retry">RETRY</string>
    <string name="network">Network</string>
    <string name="your_recent_transactions">Your Recent Transactions</string>
    <string name="transfer_from">TRANSFER FROM</string>
    <string name="transfer_amount">TRANSFER AMOUNT</string>
    <string name="transfer_to">TRANSFER TO</string>
    <string name="receivers_number">RECEIVERS NUMBER</string>
    <string name="select_network">SELECT NETWORK</string>
    <string name="pin">PIN</string>
    <string name="inactive">Inactive</string>
    <string name="status">Status</string>
    <string name="date">Date</string>
    <string name="ref_id">Ref. ID</string>
    <string name="resend_otp">RESEND OTP?</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="active">Active</string>
    <string name="sent_pending_sms">Sent,Pending SMS</string>
    <string name="sender">Sender</string>
    <string name="receiver">Receiver</string>
    <string name="summary">Summary</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="request_sent">Request Sent</string>
    <string name="cannot_check_balance_for_this_network">Cant Check USSD Balance for this network</string>
    <string name="click_a_number_first">Click on a number first</string>
    <string name="new_sim_detected">New Sim Detected, You Need to Register this sim on your account</string>
    <string name="insert_a_sim_card">Insert a sim card</string>
    <string name="select_a_number">Select a number</string>
    <string name="amount_is_required">Amount is required</string>
    <string name="minimum_is">Amount is too low. Minimum is</string>
    <string name="check_balance_first">Please Check Account Balance First</string>
    <string name="select_a_number_and_check_balance">Select a number and check balance</string>
    <string name="enter_receivers_number">Enter receivers number</string>
    <string name="number_too_short">Number is too short. Must be 11 digits</string>
    <string name="select_a_network">Select a network</string>
    <string name="enter_network_pin">Enter network pin</string>
    <string name="pin_too_short">Pin is too short</string>
    <string name="hi">Hi</string>
    <string name="no_network_available">No network available</string>
    <string name="please_login_with_new_details">Please login in with new details</string>
    <string name="server_error_try_again">Server error. Please try again later --</string>
    <string name="invalid_hash_key">invalid hash key</string>
    <string name="this_is_required">This is required</string>
    <string name="password_is_too_short">Password is too short</string>
    <string name="password_do_not_match">Passwords do not match</string>
    <string name="first_name_is_required">First name is required</string>
    <string name="name_is_too_short">First name is too short</string>
    <string name="last_name_is_required">Last name is required</string>
    <string name="invalid_email_address">Invalid email address</string>
    <string name="username_is_required">Username is required</string>
</resources>