<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_regular"
            android:text="@string/otp_verification"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <com.chaos.view.PinView
                android:id="@+id/otpPinview"
                style="@style/PinWidget.PinView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:inputType="number"
                android:padding="10dp"
                android:textSize="@dimen/_15ssp"
                app:itemCount="4"
                app:itemHeight="48dp"
                app:itemRadius="10dp"
                app:lineColor="@android:color/darker_gray"
                app:viewType="rectangle" />
        </LinearLayout>

        <TextView
            android:id="@+id/resendTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="8dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/rubik_regular"
            android:gravity="right"
            android:text="@string/resend_otp"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/verifyButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="5"
                android:background="@drawable/dashboard_buttons"
                android:text="@string/verify_otp"
                android:textColor="#FFF"
                android:textSize="@dimen/_13ssp" />

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="5"
                android:background="@drawable/success_buttons"
                android:text="@string/cancel"
                android:textColor="#FFF"
                android:textSize="@dimen/_13ssp" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>