<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_regular"
            android:text="Tingtel"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_7ssp"
            android:fontFamily="@font/rubik_regular"
            android:text="@string/do_you_want_to_delete_this_sim"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12ssp"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/_15ssp">

            <Button
                android:id="@+id/btn_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_7ssp"
                android:layout_weight="5"
                android:background="@drawable/dashboard_buttons"
                android:text="@string/yes_delete"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_7ssp"
                android:layout_weight="5"
                android:background="@drawable/success_buttons"
                android:text="@string/cancel"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>