<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".fragments.signup.SignUpHomeFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="3"
        android:fillViewport="true"
        android:gravity="center|top"
        android:orientation="vertical">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:src="@drawable/tingtel_one" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tv_first_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableRight="@drawable/ic_person"
                        android:fontFamily="@font/rubik_regular"
                        android:hint="@string/enter_your_first_name"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColorHint="@color/white"
                        android:textSize="@dimen/_14ssp" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tv_last_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableRight="@drawable/ic_person"
                        android:fontFamily="@font/rubik_regular"
                        android:hint="@string/etner_your_last_name"
                        android:inputType="text"
                        android:singleLine="true"
                        android:textSize="@dimen/_14ssp" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tv_email_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableRight="@drawable/ic_mail"
                        android:fontFamily="@font/rubik_regular"
                        android:hint="@string/enter_your_email_address"
                        android:inputType="textEmailAddress"
                        android:singleLine="true"
                        android:textSize="@dimen/_14ssp" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_3sdp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tv_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableRight="@drawable/ic_person"
                        android:fontFamily="@font/rubik_regular"
                        android:hint="@string/enter_your_username"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textSize="@dimen/_14ssp" />

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1">

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:background="@drawable/dashboard_buttons"
            android:fontFamily="@font/rubik_regular"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10ssp"
        android:layout_marginBottom="@dimen/_6sdp"
        android:layout_weight="0.05">


        <TextView
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/rubik_regular"
            android:gravity="center"
            android:text="@string/have_an_account_login"
            android:textSize="@dimen/_11ssp"
            android:textStyle="bold" />
    </FrameLayout>
</LinearLayout>
